--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Start Page</title>
+        <title>SOAP-Webservice: Fahrzeugverleih</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1>SOAP-Webservice: Fahrzeugverleih</h1>
+        <p>
+            Zur WSDL: <a href="Fahrzeugverleih?wsdl">Hier entlang!</a>
+        </p>
     </body>
 </html>
